refactor: format code